--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -6,6 +6,7 @@
 
   <div class="author__avatar">
     <img src="{{ author.avatar }}" class="author__avatar" alt="{{ author.name }}">
+    <figcaption>Taken by Dear 7</figcaption>
   </div>
 
   <div class="author__content">
