--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -6,7 +6,10 @@
 
   <div class="author__avatar">
     <img src="{{ author.avatar }}" class="author__avatar" alt="{{ author.name }}">
-    <figcaption>Taken by Dear 7</figcaption>
+    <!-- <figcaption>Taken by Dear 7</figcaption> -->
+    <div class="caption-container">
+      <figcaption style="font-family: cursive; font-size: 8px;">Taken by Dear 7</figcaption>
+    </div>
   </div>
 
   <div class="author__content">
