--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -8,7 +8,7 @@
     <img src="{{ author.avatar }}" class="author__avatar" alt="{{ author.name }}">
     <!-- <figcaption>Taken by Dear 7</figcaption> -->
     <div class="caption-container">
-      <figcaption style="font-family: cursive; font-size: 8px;">Taken by Dear 7</figcaption>
+      <figcaption style="font-family: fantasy; font-size: 10px;">Taken by Dear 7</figcaption>
     </div>
   </div>
 
